--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Hvis du leder efter en hurtigere måde at starte en ny chat på, kan du nu hurtigt scanne en QR-kode for brugernavn fra skærmen "Find efter brugernavn". 
