--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Wenn du einen neuen Chat schneller beginnen willst, kannst du jetzt den QR-Code des Nutzernamens auf dem Bildschirm »Nach Nutzernamen suchen« scannen. 
