--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Envie de démarrer de nouvelles conversations plus rapidement ? Il vous suffit désormais d’accéder à l’écran « Rechercher par nom d’utilisateur » et d’y scanner le code QR associé à un nom d’utilisateur. 
