--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• यदि आप एक नया चैट शुरू करने का एक तेज़ तरीका खोज रहे हैं, तो अब आप "यूज़रनेम से खोजें" स्क्रीन से एक यूज़रनेम QR कोड को जल्दी से स्कैन कर सकते हैं। 
