--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Da ora iniziare una chat sarà veloce come… beh, non la luce, ma ti basterà scansionare il codice QR di un nome utente direttamente dalla schermata "Cerca per nome utente", quindi sicuramente più veloce di prima! 
