--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Dacă ești în căutarea unei modalități mai rapide de a începe o nouă conversație, acum poți scana rapid un cod QR al unui nume de utilizator din ecranul "Găsește după numele de utilizator". 
