--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Если вам нужно начать новый чат быстрее, то теперь вы можете оперативно отсканировать QR-код имени пользователя на экране «Найти по имени пользователя». 
