--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Yeni bir sohbet başlatmak için daha hızlı bir yol arıyorsan "Kullanıcı Adına Göre Bul" ekranından bir kullanıcı adı kare kodunu artık hızlıca tarayabilirsin. 
