--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• 如果你正在尋找一種更快的方式來開始新的聊天，現在你可以從「以用戶名稱搜尋」畫面快速掃描用戶名稱二維碼。 
