--- a/Signal/translations/sr.lproj/PluralAware.stringsdict
+++ b/Signal/translations/sr.lproj/PluralAware.stringsdict
@@ -696,9 +696,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Једног члана није било могуће додати у нову групу и тај члан је уклоњен.</string>
+			<string>Додавање %1$d члана у нову групу није успело и тај члан је уклоњен.</string>
 			<key>other</key>
-			<string>Њих %1$d није било могуће додати у нову групу и ти чланови су уклоњени.</string>
+			<string>Додавање њих %1$d у нову групу није успело и ти чланови су уклоњени.</string>
 		</dict>
 	</dict>
 	<key>GROUP_WAS_MIGRATED_USERS_INVITED_%d</key>
@@ -712,9 +712,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Једног члана није било могуће додати у нову групу и тај члан је добио позивницу да се придружи.</string>
+			<string>Додавање %1$d члана у нову групу није успело и тај члан је добио позивницу да се придружи.</string>
 			<key>other</key>
-			<string>Њих %1$d није било могуће додати у нову групу и ти чланови су добили позивницу да се придруже.</string>
+			<string>Додавање њих %1$d у нову групу није успело и ти чланови су добили позивницу да се придруже.</string>
 		</dict>
 	</dict>
 	<key>IMAGE_PICKER_CAN_SELECT_NO_MORE_TOAST_%d</key>
