--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• يُمكنك الآن مسح رمز الاستجابة السريعة لاسم مُستخدم من شاشة "البحث باستخدام اسم المُستخدم". 
