--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Ara pots escanejar ràpidament un codi QR d'àlies des de la pantalla "Buscar per àlies". 
