--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Jos kaipaat nopeampaa tapaa aloittaa uusi keskustelu, voit nyt skannata käyttäjänimeen liittyvän QR-koodin Etsi käyttäjänimellä -näytöstä. 
