--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• עכשיו, אפשר לסרוק במהירות קוד QR של שם משתמש מהמסך ״חיפוש לפי שם משתמש״. 
