--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Sada možete još brže pronaći kontakt skeniranjem QR koda koji se nalazi u odjeljku "Traži po korisničkom imenu". 
