--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Mostantól gyorsan beolvashatod a felhasználónév QR-kódját a „Felhasználónév szerinti keresés" képernyőről. 
