--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Sekarang Anda bisa dengan cepat memindai kode QR nama pengguna dari layar "Cari menurut nama pengguna". 
