--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Kini anda boleh imbas kod QR nama pengguna dengan pantas daripada skrin "Cari dengan Nama Pengguna". 
