--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Jeśli szukasz szybszego sposobu na rozpoczęcie nowego czatu, teraz możesz szybko zeskanować kod QR nazwy użytkownika na ekranie „Znajdź według nazwy użytkownika”.<br /> 
