--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Agora pode ler rapidamente um código QR a partir do ecrã "Encontrar por nome de utilizador". 
