--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Тепер можна швидше почати новий чат, просто зісканувавши QR-код імені користувача з екрану «Пошук за ім'ям користувача». 
