--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• If you're looking for a faster way to start a new chat, now you can quickly scan a username QR code from the "Find by Username" screen. 
+• Giờ đây bạn có thể nhanh chóng quét mã QR của tên người dùng từ giao diện "Tìm theo Tên người dùng". 
